--- a/index.html
+++ b/index.html
@@ -48,16 +48,11 @@
 
   <div id="introduction" class="section">
     <h2>1. Introduction</h2>
-    <p>This report, developed in collaboration with advanced AI agents, offers project managers an up‑to‑date exploration of generative AI’s transformative role in modern project management. We examine real‑world case studies, hand‑picked YouTube playlists, and must‑see podcast episodes to highlight how AI is revolutionizing communication, risk forecasting, and resource planning. Designed to be both practical and visionary, this report equips leaders with actionable insights to integrate AI into daily operations and drive project success.</p>
+    <p>This report is for project managers and anyone who fulfills such a role. It was created using AI agents developed by 4-bits, which analyzed multiple sources, including YouTube project management channels. The report explores how generative AI enhances project execution by improving scheduling, risk forecasting, collaboration, and resource planning. It provides real-world case studies, curated media, and practical AI applications to support better decision-making and efficiency in project management. </p>
   </div>
 
   <div id="insights" class="section">
     <h2>2. Insights</h2>
-    <ul>
-      <li><strong>Enhanced Communication:</strong> Generative AI tools now craft polished emails and status updates in minutes. <a href="https://chat.openai.com" target="_blank">Learn More</a></li>
-      <li><strong>Predictive Risk Analysis:</strong> Advanced AI models improve early risk detection and support dynamic risk registers. <a href="https://www.reddit.com/r/ProjectManagement/" target="_blank">Explore on Reddit</a></li>
-      <li><strong>Resource Optimization:</strong> Data‑driven AI solutions offer precise recommendations for team assignments and scheduling. <a href="https://www.youtube.com/results?search_query=ai+resource+allocation" target="_blank">Watch Insights</a></li>
-    </ul>
   </div>
 
   <div id="realworld" class="section">
@@ -125,7 +120,7 @@
     <ul>
       <li><strong>“AI in Project Management” – Influential PMO:</strong> Short, focused videos (5–15 min) on ChatGPT, AI‑based project tracking, and advanced forecasting. <a href="https://www.youtube.com/playlist?list=PLTZYG7bZ1u6puLWxUtqAjZkIB4dB_JFzk" target="_blank">Playlist Link</a></li>
       <li><strong>Cornelius Fichtner: “Artificial Intelligence for Project Managers”:</strong> Deep dives into LLMs in PM context with practical scheduling examples. <a href="https://www.youtube.com/playlist?list=PLhiEX99Qp66y7IV9zuV94ISr1gCtk3Jnx" target="_blank">Playlist Link</a></li>
-      <li><strong>PMI’s “Infinity Learning Series” (AI Edition):</strong> Official bite‑sized videos exploring real AI use cases, risk management, and cost optimization. <a href="https://www.youtube.com/c/PMInstitute" target="_blank">PMI Channel</a> (search “Infinity Learning AI”)</li>
+      <li><strong>PMI’s “Infinity Learning Series” (AI Edition):</strong> Official bite‑sized videos exploring real AI use cases, risk management, and cost optimization. <a href="https://www.youtube.com/playlist?list=PLSP5iPcvxpPiHht-15SpW3-tTSSSobuos" target="_blank">PMI Channel</a> (search “Infinity Learning AI”)</li>
       <li><strong>Agile Excellence with AI Integration:</strong> Covers how AI complements Agile processes: grooming backlogs, sprint retrospectives, and velocity forecasting. <a href="https://www.youtube.com/playlist?list=PL9LbKkJ2CKeOdGz4xNi1tSkGLifjVmr0f" target="_blank">Playlist Link</a></li>
     </ul>
   </div>
