--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
   </style>
 </head>
 <body>
-  <h1>Generative AI for Project Managers</h1>
+  <h1 style="font-weight: bold; font-size: 2.5em;">Generative AI for Project Managers</h1>
 
   <h2>Contents</h2>
   <ul>
@@ -83,7 +83,7 @@
     <ul>
       <li><strong>“AI in Project Management” – Influential PMO:</strong> Short, focused videos (5–15 min) on ChatGPT, AI‑based project tracking, and advanced forecasting. <a href="https://www.youtube.com/playlist?list=PLTZYG7bZ1u6puLWxUtqAjZkIB4dB_JFzk" target="_blank">Playlist Link</a></li>
       <li><strong>Cornelius Fichtner: “Artificial Intelligence for Project Managers”:</strong> Deep dives into LLMs in PM context with practical scheduling examples. <a href="https://www.youtube.com/playlist?list=PLhiEX99Qp66y7IV9zuV94ISr1gCtk3Jnx" target="_blank">Playlist Link</a></li>
-      <li><strong>PMI’s “Infinity Learning Series” (AI Edition):</strong> Official bite‑sized videos exploring real AI use cases, risk management, and cost optimization. <a href="https://www.youtube.com/c/PMInstitute" target="_blank">PMI Channel</a> (search “Infinity Learning AI”)</li>
+      <li><strong>PMI’s “Infinity Learning Series” (AI Edition):</strong> Official bite‑sized videos exploring real AI use cases, risk management, and cost optimization. <a href="https://www.youtube.com/c/PMInstitute" target="_blank">PMI Channel</a> </li>
       <li><strong>Agile Excellence with AI Integration:</strong> Covers how AI complements Agile processes: grooming backlogs, sprint retrospectives, and velocity forecasting. <a href="https://www.youtube.com/playlist?list=PL9LbKkJ2CKeOdGz4xNi1tSkGLifjVmr0f" target="_blank">Playlist Link</a></li>
     </ul>
   </div>
@@ -116,15 +116,27 @@
   <div id="ai-hints" class="section">
     <h2>6. AI Hints for Project Managers Everyday Tasks</h2>
     <ul>
-      <li><strong>Automate Emails & Updates:</strong> <em>Tool:</em> ChatGPT – Transform rough drafts into polished emails and status reports. <em>Source:</em> Reddit Discussion</li>
-      <li><strong>Optimize Resource Allocation:</strong> <em>Tool:</em> Custom AI solutions or Microsoft Project with AI add‑ons – Analyze data to recommend optimal team assignments and task scheduling. <em>Source:</em> Reddit Post</li>
-      <li><strong>Predict & Manage Risks:</strong> <em>Tool:</em> ChatGPT for risk documentation and predictive analytics – Use AI for early risk detection and draft dynamic risk registers. <em>Source:</em> YouTube Tutorial 
-        <br>• <a href="https://www.reddit.com/r/ProjectManagement/" target="_blank">Reddit PM</a>  
-        <br>• <a href="https://www.youtube.com/results?search_query=ai+task+list+generation" target="_blank">YouTube</a>
+      <li><strong>Automate Emails & Updates:</strong><br>
+    <em>Tool:</em> ChatGPT<br>
+    <em>Trick:</em> Transform rough drafts into polished emails and status reports.<br>
+    https://www.youtube.com/watch?v=FfA6lqj-6m0#:~:text=YouTube%20www,Proper%20Project
+    https://www.reddit.com/r/projectmanagement/comments/1ij4cbz/what_useful_ways_can_pms_use_chatgpt_beyond/#:~:text=%E2%80%A2
       </li>
-      <li><strong>Streamline Meeting Management:</strong> <em>Tool:</em> Fireflies.ai, Otter.ai, or Read.ai – Automate transcription, generate summaries, and extract action items. <em>Source:</em> Reddit Feedback</li>
-      <li><strong>Speed Up Documentation:</strong> <em>Tool:</em> ChatGPT and Grammarly – Draft reports, project charters, and key documents faster with AI assistance. <em>Source:</em> YouTube Example 
-        <br>• <a href="https://www.youtube.com/results?search_query=ai+document+automation" target="_blank">YouTube Search</a>
+      <li><strong>Optimize Resource Allocation:</strong><br>
+    <em>Tool:</em> Custom AI solutions or Microsoft Project with AI add‑ons<br>
+    <em>Trick:</em> Analyze data to recommend optimal team assignments and task scheduling.<br>
+    <em>Source:</em> Reddit Post</li>
+      <li><strong>Streamline Meeting Management:</strong><br>
+    <em>Tool:</em> Fireflies.ai, Otter.ai, or Read.ai<br>
+    <em>Trick:</em> Automate transcription, generate summaries, and extract action items.<br>
+<a href="https://www.youtube.com/watch?v=0TyX7G00x3A" target="_blank">Watch Here</a> <br>
+<a href="https://www.reddit.com/r/buhaydigital/comments/174vsxk/what_ai_that_could_help_me_take_notes_during_a/" target="_blank"> What AI that could help me take notes during a meeting.</a> 
+      </li>
+      <li><strong>Speed Up Documentation:</strong><br>
+    <em>Tool:</em> ChatGPT<br>
+    <em>Trick:</em> Draft reports, project charters, and key documents faster with AI assistance.<br>
+    <em>Source:</em> YouTube Example 
+        <br>• <a href="c" target="_blank">YouTube Search</a>
       </li>
     </ul>
   </div>
